<resources>
    <string name="menuHome">Sākums</string>
    <string name="menuAboutProject">Par JBV</string>
    <string name="menuHowToUse">Šķirkļa uzbūve</string>
    <string name="menuImages">Attēli</string>
    <string name="menuSources">Izmantotie avoti</string>
    <string name="menuNotes">Izmantotie apzīmējumi</string>
    <string name="menuPublications">Publikācijas</string>
    <string name="menuSemanticSearch">Semantiskā meklēšana</string>
    <string name="menuChangeLang">Izvēlieties lietotnes valodu - angļu</string>
    <string name="appName">"Jaunā botāniskā vārdnīca (latīņu-angļu-krievu-latviešu-vācu) (JBV)"</string>
    <string name="constructionOfPlant">Auga uzbūve</string>
    <string name="constructionOfFlower">Zieda uzbūve</string>
    <string name="constructionOfSeed">Sēklas uzbūve (pupa)</string>
    <string name="constructionOfSimpleLeaf">Vienkāršas lapas \nuzbūve</string>
    <string name="constructionOfCompoundLeaf">Saliktas lapas uzbūve</string>
    <string name="constructionOfRoot">Saknes uzbūve</string>
    <string name="LV">LV</string>
    <string name="LA">LA</string>
    <string name="EN">EN</string>
    <string name="RU">RU</string>
    <string name="DE">DE</string>
    <string-array name="languageCodes">
        <item>EN</item>
        <item>DE</item>
        <item>LA</item>
        <item>LV</item>
        <item>RU</item>
    </string-array>
    <string name="definitionTextTezaurs">T* - Definīcija no www.tezaurs.lv (definīcijas atlasītas automātiski un var būt neprecīzas)</string>
    <string name="genus">ģints</string>
    <string name="subgenus">apakšģints</string>
    <string name="species">suga</string>
    <string name="subsecies">pasuga</string>
    <string name="variety">varietāte</string>
    <string name="form">forma</string>
    <string name="cultivarGroup">šķirņu grupa</string>
    <string-array name="termBackgroundText">
        <item>ģints</item>
        <item>apakšģints</item>
        <item>suga</item>
        <item>pasuga</item>
        <item>varietāte</item>
        <item>forma</item>
        <item>šķirņu grupa</item>
    </string-array>
    <string name="countryCodes">AT – Austrijā\nCH - Šveicē\nDE - Vācijā\nGB - Lielbritānijā\nUS – Amerikas Savienotajās Valstīs</string>
    <string name="countryCodeTitles">Valsts kodi</string>
    <string name="fGender">sieviešu dzimte</string>
    <string name="mGender">vīriešu dzimte</string>
    <string name="nGender">nekatra dzimte</string>
    <string name="singular">vienskaitlis</string>
    <string name="plural">daudzskaitlis</string>
    <string name="indeclinable">nelokāms</string>
    <string name="entries">Šķirkļi</string>
    <string name="searchButtonText">Meklēt</string>
    <string name="searchButtonSemantics">Meklēt (tikai latīniski)</string>
    <string name="ToastInsertTerm">Lūdzu ievadiet vārdu</string>
    <string name="ToastTooShort">Vārds ir pārāk īss</string>
    <string name="ToastNotInDB">Meklētais vārds nav atrasts datu bāzē</string>
    <string name="ToastIsItRightTerm">Vai domājāt šo šķirkli?</string>
    <string name="ConstructionImageSelection">Termins attēlots divos uzbūves attēlos.</string>
    <string name="yes">Jā</string>
    <string name="no">Nē</string>
    <string name="semanticInfo">* Meklētais termins</string>
    <string name="gendersLegend"><i>f</i> - femininum; <i>m</i> - maskulinum; <i>n</i> - neutrum;</string>
    <string name="LA_table">LA\nlatīniski</string>
    <string name="EN_table">EN\nangliski</string>
    <string name="DE_table">DE\nvāciski</string>
    <string name="RU_table">RU\nkrieviski</string>
    <string name="LV_table">LV\nlatviski</string>
    <string name="fGenderN">f</string>
    <string name="fLA">femininum</string>
    <string name="fEN">female form</string>
    <string name="fDE">Femininum</string>
    <string name="fLV">sieviešu dzimte</string>
    <string name="fRU">женский род</string>
    <string name="mGenderN">m</string>
    <string name="mLA">masculinum</string>
    <string name="mEN">male form</string>
    <string name="mDE">Maskulinum</string>
    <string name="mLV">vīriešu dzimte</string>
    <string name="mRU">мужской род</string>
    <string name="nGenderN">n</string>
    <string name="nLA">neutrum</string>
    <string name="nEN">neutral form</string>
    <string name="nDE">Neutrum</string>
    <string name="nLV">nekatra dzimte</string>
    <string name="nRU">средний род</string>
    <string name="pluralN">pl</string>
    <string name="plLA">pluralis</string>
    <string name="plEN">plural</string>
    <string name="plDE">Singular</string>
    <string name="plLV">daudzskaitlis</string>
    <string name="plRU">множественное число</string>
    <string name="singularN">sg</string>
    <string name="siLA">singularis</string>
    <string name="siEN">singular</string>
    <string name="siDE">Plural</string>
    <string name="siLV">vienskaitlis</string>
    <string name="siRU">единственное число</string>
    <string name="slash">/</string>
    <string name="slLA">vel</string>
    <string name="slEN">or</string>
    <string name="slDE">oder</string>
    <string name="slLV">vai</string>
    <string name="slRU">или</string>
    <string name="titleAboutAppDE">Neues botanisches Wörterbuch.\nTermini Lettisch-Latein-Englisch-Russisch-Deutsch</string>
    <string name="subtitleAboutAppDE">Zu diesem Wörterbuch</string>
    <string name="textAboutAppDE">\tDas Modell eines neuen botanischen Wörterbuchs für die mobile Anwendung wurde Ende 2017 im Rahmen des Projekts "Entwicklung der wissenschaftlichen Tätigkeit an der Hochschule Ventspils" in Zusammenarbeit von Studenten und Forschern der Fakultäten für Übersetzungswissenschaften und für Informationstechnologie erstellt. Es ist dies der erste Versuch, ein solches Wörterbuchmodell in fünf Sprachen zu erstellen.
        \n\tAn dem Projekt zur Erstellung des Wörterbuchs beteiligt waren <i>Prof. Dr. philol. </i>J. Baldunčiks (wissenschaftlicher Berater), <i>Bc. comp. </i>N. Bērziņš (Programmierer, Magistrant an der Fakultät für Informationswissenschaft der Hochschule Ventspils), <i>Mg. philol.</i> S. Ozoliņa (Übersetzerin), <i>Dr. philol. </i>S. Sviķe (Forscherin, Projektleiterin, Übersetzerin), <i>Mg. sc. comp.</i> K. Šķirmante (Forscherin), <i>Mg. philol.</i> S. Štekerhofa (Korrektorin) und I. Tīrmane (Übersetzerin, Studentin der Übersetzungswissenschaften an der Hochschule Ventspils). Als Berater fungierten <i>Dr. biol.</i> E. Vimba und Z. Purne, Leiterin der Pflanzenabteilung der Orangerie des Nationalen Botanischen Gartens. Die künstlerische Gestaltung und die Abbildungen stammen von <i>M.A.</i> E. Ēce.
\n\tIn dem Wörterbuch sind die Bezeichnungen von Pflanzen und weitere botanische Termini in den Sprachen Lettisch, Latein, Englisch, Russisch und Deutsch enthalten. Das Wörterbuch richtet sich in erster Linie an Studenten der Übersetzungswissenschaften und an Übersetzer, d.h. an alle Personen, die für ihr Studium oder ihre berufliche Tätigkeit Übersetzungen von Termini in einem solchen Umfang benötigen und die Lettisch als Muttersprache haben oder über sehr gute Kenntnisse in dieser Sprache verfügen. Das Wörterbuch richtet sich aber auch an Schüler und ihre Lehrer in naturwissenschaftlichen Fächern, an Studenten der Naturwissenschaften und ihre Pädagogen sowie an Floristen, Gärtner, Pharmazeuten und sonstige Interessenten, die in diesen Bereichen tätig sind und Übersetzungen botanischer Termini benötigen. Das Wörterbuch kann auch von Interessenten mit einer anderen Muttersprache als Lettisch verwendet haben, doch ist die Schnittstelle für die mobile Anwendung grundsätzlich auf Lettisch.
\n\tDie Einleitung des Wörterbuchs enthält ein Vorwort, ein Literaturverzeichnis und ein Verzeichnis der verwendeten Bezeichnungen. Die Einleitung soll um Hyperlinks zu einschlägigen spezifischen wissenschaftlichen Artikeln zur botanischen Terminologie, Veränderungen bei taxonomischen Kategorien, Ergebnissen lexikografischer Untersuchungen und dergleichen ergänzt werden. Den Hauptteil des Wörterbuchs bilden eine Sammlung unterschiedlicher botanischer Termini (Bezeichnungen von Pflanzen, Termini zu Pflanzenteilen und sonstige botanische Termini) sowie ein visueller Wörterbuchabschnitt (Abbildungen und Termini). In das Wörterbuch wurden vor allem terminologische Pflanzenbezeichnungen in den Sprachen Lettisch wie auch Englisch, Russisch und Deutsch aufgenommen. Das Wörterbuch enthält keine breite Synonymie von Pflanzenbezeichnungen (d.h. keine "volkstümlichen Bezeichnungen"), weder für das Lettische noch für die übrigen Sprachen. Für die genaue Identifizierung einer Pflanze und für die Suche nach Synonymen dienen die aufgeführten lateinischen Bezeichnungen. Zur Auswahl der lettischen Termini wurde das in der Dissertation von S. Sviķe erstellte Grundverzeichnis mit rund 500 Pflanzenbezeichnungen für ein mittelgroßes zweisprachiges Wörterbuch verwendet, das um Termini aus allgemeinen botanischen Lehrbüchern ergänzt wurde. Für die Auswahl der lateinischen, englischen, russischen und deutschen Termini wurden die wissenschaftliche Literatur, mehrsprachige botanische Wörterbücher, erklärende Wörterbücher, Enzyklopädien und sonstige spezielle Werke verwendet, die im Literaturverzeichnis aufgeführt sind. Die taxonomischen Kategorien der in dem Wörterbuch enthaltenen Pflanzenbezeichnungen sind farbig markiert. Für die lettischen, russischen und deutschen Äquivalente ist das Genus als grammatische Kategorie angegeben (in lateinischer Abkürzung). Bestimmten Pflanzenbezeichnungen wurden Fotografien beigefügt, doch verfügt der Großteil der Pflanzenbezeichnungen über einen Hyperlink zu einer Abbildung in der freien Enzyklopädie <i>Wikipedia</i>. Für den Inhalt der externen Links übernehmen die Schöpfer des Wörterbuchs keine Verantwortung. Bestimmte Positionen sind auf der Internetseite <i>www.tezaurs.lv</i> mit der konsolidierten Wörterbuchversion verbunden, und diese Positionen enthalten einen Hyperlink zu der Seite, auf der die Definitionen der Termini enthalten sind. Für das Öffnen der externen Links wird ein Zugang zum Internet benötigt. Das Wörterbuchmodell soll einmal im Quartal aktualisiert werden. Nutzer werden darüber informiert und erhalten eine Aufforderung zur Aktualisierung. Im Suchfenster können Wörter sowohl in der Singular- als auch in der Pluralform eingegeben werden, um die Suche im Wörterbuch zu starten.
\n\tTrotz aller Sorgfalt bei der Auswahl und Sammlung der Termini wie auch bei der Erstellung der technischen Lösungen zur mobilen Anwendung können in dem Wörterbuch Unvollständigkeiten und Fehler nicht ausgeschlossen werden. Es ergeht daher die Bitte, der Projektleiterin sämtliche Anmerkungen per E-Mail an die folgende Adresse zu schicken: silga.svike@gmail.com. Hierfür bereits vielen Dank im Voraus!

\n\n\tDie zweite, erweiterte Auflage des Wörterbuchs wurde Ende 2018 erstellt. Am Projekt beteiligt waren <i>Prof. Dr. philol. </i>J. Baldunčiks (wissenschaftlicher Berater), <i>Bc. comp. </i>N. Bērziņš (Programmierer, Magistrant der Fakultät für Informationswissenschaft der Hochschule Ventspils), A. Liukonens (Übersetzer, Student der Übersetzungswissenschaften an der Hochschule Ventspils), <i>Mg. philol.</i> S. Ozoliņa (Übersetzerin), <i>Dr. philol.</i> S. Sviķe (Forscherin, Projektleiterin), <i>Mg. sc. comp.</i> K. Šķirmante (Forscherin, Programmiererin), E. Žabaļūns (Programmierer, Student der Fakultät für Informationswissenschaft der Hochschule Ventspils). Berater - <i>Dr. agr.</i> A. Stalažs. Die künstlerischen Abbildungen stammen von <i>Mg. art.</i> E. Ozoliņa. Das Wörterbuch enthält ungefähr 890 lettischen Termini. Die inhaltlichen und funktionalen Ergänzungen im Wörterbuch werden hauptsächlich im Abschnitt "Aufbau des Wörterbuchartikels" (Šķirkļa uzbūve/Entry structure) beschrieben.


\n\n\t© Hochschule Ventspils, 2019
\n\t© S. Sviķe, 2019
\n\t© E. Ozoliņa, 2019
</string>
</resources>