<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_screen"
        android:title="@string/menuHome" />
    <item
        android:id="@+id/about"
        android:title="@string/menuAboutProject" />
    <item
        android:id="@+id/app_manual"
        android:title="@string/menuHowToUse"/>
    <item
        android:id="@+id/gendersTranslations"
        android:title="@string/menuNotes" />
    <item
        android:id="@+id/allImages"
        android:title="@string/menuImages" />
    <item
        android:id="@+id/sources"
        android:title="@string/menuSources" />
    <item
        android:id="@+id/publications"
        android:title="@string/menuPublications" />
    <item
        android:id="@+id/app_lang"
        android:title="@string/menuChangeLang"/>


</menu>