<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nils.botaniskietermini.TranslationOfGenders"
    android:configChanges="locale"
    android:background="@color/background">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <TableRow
            android:background="@color/tableCellBorder">
            <TextView android:layout_column="1"
                android:text="\n"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView
                android:id="@+id/LA_title"
                android:layout_column="2"
                android:text="@string/LA_table"
                android:gravity="center"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView
                android:id="@+id/EN_title"
                android:layout_column="3"
                android:text="@string/EN_table"
                android:gravity="center"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:id="@+id/DE_title"
                android:layout_column="4"
                android:text="@string/DE_table"
                android:gravity="center"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:id="@+id/LV_title"
                android:layout_column="5"
                android:text="@string/LV_table"
                android:gravity="center"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:id="@+id/RU_title"
                android:layout_column="6"
                android:text="@string/RU_table"
                android:gravity="center"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
        </TableRow><TableRow
            android:background="@color/tableCellBorder">
            <TextView android:layout_column="1"
                android:gravity="center"
                android:textStyle="italic"
                android:textColor="@color/tableCellBorder"
                android:text="@string/fGenderN"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="2"
                android:text="@string/fLA"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="3"
                android:text="@string/fEN"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="4"
                android:text="@string/fDE"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="5"
                android:text="@string/fLV"
                android:textColor="@color/tableCellBorder"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="6"
                android:text="@string/fRU"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
        </TableRow>
        <TableRow
            android:background="@color/tableCellBorder">
            <TextView android:layout_column="1"
                android:gravity="center"
                android:textStyle="italic"
                android:textColor="@color/tableCellBorder"
                android:text="@string/mGenderN"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="2"
                android:text="@string/mLA"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="3"
                android:text="@string/mEN"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="4"
                android:text="@string/mDE"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="5"
                android:text="@string/mLV"
                android:textColor="@color/tableCellBorder"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="6"
                android:text="@string/mRU"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
        </TableRow>
        <TableRow
            android:background="@color/tableCellBorder">
            <TextView android:layout_column="1"
                android:gravity="center"
                android:textStyle="italic"
                android:textColor="@color/tableCellBorder"
                android:text="@string/nGenderN"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="2"
                android:text="@string/nLA"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="3"
                android:text="@string/nEN"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="4"
                android:text="@string/nDE"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="5"
                android:text="@string/nLV"
                android:textColor="@color/tableCellBorder"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="6"
                android:text="@string/nRU"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
        </TableRow>
        <TableRow
            android:background="@color/tableCellBorder">
            <TextView android:layout_column="1"
                android:gravity="center"
                android:textStyle="italic"
                android:textColor="@color/tableCellBorder"
                android:text="@string/pluralN"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="2"
                android:text="@string/plLA"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="3"
                android:text="@string/plEN"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="4"
                android:text="@string/plDE"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="5"
                android:text="@string/plLV"
                android:textColor="@color/tableCellBorder"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="6"
                android:text="@string/plRU"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
        </TableRow>
        <TableRow
            android:background="@color/tableCellBorder">
            <TextView android:layout_column="1"
                android:gravity="center"
                android:textStyle="italic"
                android:textColor="@color/tableCellBorder"
                android:text="@string/singularN"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="2"
                android:text="@string/siLA"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="3"
                android:text="@string/siEN"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="4"
                android:text="@string/siDE"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="5"
                android:text="@string/siLV"
                android:textColor="@color/tableCellBorder"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="6"
                android:text="@string/siRU"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
        </TableRow>
        <TableRow
            android:background="@color/tableCellBorder">
            <TextView android:layout_column="1"
                android:gravity="center"
                android:textStyle="italic"
                android:textColor="@color/tableCellBorder"
                android:text="@string/slash"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="2"
                android:text="@string/slLA"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="3"
                android:text="@string/slEN"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="4"
                android:text="@string/slDE"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="5"
                android:text="@string/slLV"
                android:textColor="@color/tableCellBorder"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
            <TextView android:layout_column="6"
                android:text="@string/slRU"
                android:paddingEnd="@dimen/paddingEndGendersTable"
                android:paddingStart="@dimen/paddingStartGendersTable"
                android:background="@drawable/table_cell_shape"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
