<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nils.botaniskietermini.TabAboutAppDE">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/paddingAboutApp"
                android:paddingStart="@dimen/paddingAboutApp"
                android:paddingTop="@dimen/paddingAboutApp"
                android:text="@string/titleAboutAppDE"
                android:textColor="@color/aboutAppTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/paddingAboutApp"
                android:paddingStart="@dimen/paddingAboutApp"
                android:paddingTop="@dimen/paddingAboutApp"
                android:text="@string/subtitleAboutAppDE"
                android:textColor="@color/aboutAppTextColor"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/paddingAboutApp"
                android:paddingEnd="@dimen/paddingAboutApp"
                android:paddingStart="@dimen/paddingAboutApp"
                android:paddingTop="@dimen/paddingAboutApp"
                android:text="@string/textAboutAppDE"
                android:textColor="@color/aboutAppTextColor"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
